Styling the html files with CSS

--- a/contact.html
+++ b/contact.html
@@ -6,47 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-<!--Header-->
+    <!--Header-->
     <header>
 
         <div class="name">
-            <H1>Rachida Kone</H1>
-        </div>
-
-        <div class="navigation">
-            <a href="index.html">About</a>
-            <a href="portfolio.html" target="blank">Portfolio</a>
-            <a href="#" target="blank">Contact</a>
+            <h1>Rachida Kone</h1>
+            <div class="navigation">
+                <a class="navigation-url" href="index.html">About</a>
+                <a class="navigation-url" href="portfolio.html" target="blank">Portfolio</a>
+                <a class="navigation-url" href="#" target="blank">Contact</a>
+            </div>
         </div>
     </header>
 
-<!--Adding the contact form-->
-    <form>
-        <fieldset class="contact-info">
-            <label>
-                Name
-                <input type="text" name="Name" placeholder="John Smith">
-            </label>
-            <label>
-                Email
-                <input type="Email" name="Email" placeholder="example@gmail.com">
-            </label>
-            <label>
-                Message
-             <textarea name="Message"></textarea>
-            </label>
-        </fieldset>
-        
-<!--Submit button-->
-        <fieldset class="contact-action">
-            <input class="btn" type="submit" name="submit" value="Submit">
+    <!--Adding the contact form-->
+    <section>
+        <div class="wrapper">
+            <div class="section-top">
+                <h2>Contact</h2>
+            </div>
+            <form>
+                <fieldset class="contact-info">
+                    <label>
+                        Name
+                        <input type="text" name="Name" placeholder="John Smith">
+                    </label>
+                    <label>
+                        Email
+                        <input type="Email" name="Email" placeholder="example@gmail.com">
+                    </label>
+                    <label>
+                        Message
+                        <textarea name="Message"></textarea>
+                    </label>
+                </fieldset>
 
-        </fieldset>
-    </form>
+                <!--Submit button-->
+                <fieldset class="contact-action">
+                    <input class="btn" type="submit" name="submit" value="Submit">
 
+                </fieldset>
+            </form>
+        </div>
+    </section>
+    <!--Footer-->
+    <footer>
+        <h6>Copyright © </h6>
+    </footer>
 
 
 </body>
