--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -13,32 +14,52 @@
     <header>
 
         <div class="name">
-            <H1>Rachida Kone</H1>
+            <h1>Rachida Kone</h1>
+            <div class="navigation">
+                <a class="navigation-url" href="index.html">About</a>
+                <a class="navigation-url" href="#" target="blank">Portfolio</a>
+                <a class="navigation-url" href="contact.html" target="blank">Contact</a>
+            </div>
         </div>
 
-        <div class="navigation">
-            <a href="index.html">About</a>
-            <a href="#" target="blank">Portfolio</a>
-            <a href="contact.html" target="blank">Contact</a>
-        </div>
     </header>
 
     <!--Content-->
-    <div class= "technology">
-        <img src="assets/images/p2.jpg" height="200" width="200">
-    </div>
+    <section>
+        <div class="wrapper">
+            <div class="section-top">
+                <h2>Portfolio</h2>
+            </div>
+            <div class="clearfix">
+                <div class="navigation-img">
+                    <img class="portfolio-img" src="assets/images/p2.jpg">
+                    <h5>Hangman</h5>
+                </div>
 
-    <div class="front-end">
-        <img src="assets/images/F1.jpg" height="200" width="200">
-    </div>
+                <div class="navigation-img">
+                    <img class="portfolio-img" src="assets/images/F1.jpg">
+                    <h5>RPG Game</h5>
+                </div>
+                <div class="navigation-img">
+                    <img class="portfolio-img" src="assets/images/B1.png">
+                    <h5>Trivia Game</h5>
+                </div>
+                <div class="navigation-img">
+                    <img class="portfolio-img" src="assets/images/N1.png">
+                    <h5>Rutgers Info Widget</h5>
+                </div>
+                <div class="navigation-img">
+                    <img class="portfolio-img" src="assets/images/S1.jpg">
+                    <h5>Rock Paper Scissors</h5>
+                </div>
+            </div>
+        </div>
 
-    <div class="back-end">
-        <img src="assets/images/B1.png" height="200" width="200">
-    </div>
-
-    <div class="node">
-        <img src="assets/images/N1.png" height="200" width="200">
-    </div>
+    </section>
+    <!--Footer-->
+    <footer>
+        <h6>Copyright © </h6>
+    </footer>
 
 </body>
 
