--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RK-Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
     <!--Header-->
     <header>
 
         <div class="name">
-            <H1>Rachida Kone</H1>
+            <h1>Rachida Kone</h1>
+            <div class="navigation">
+                <a class="navigation-url" href="#">About</a>
+                <a class="navigation-url" href="portfolio.html" target="blank">Portfolio</a>
+                <a class="navigation-url" href="contact.html" target="blank">Contact</a>
+            </div>
         </div>
 
-        <div class="navigation">
-            <a href="#">About</a>
-            <a href="portfolio.html" target="blank">Portfolio</a>
-            <a href="contact.html" target="blank">Contact</a>
-        </div>
     </header>
-<!--Content-->
-    <Section class= "about">
-        <div class="me">
-            <H2>About Me</H2>
-        </div>
-        <div class="dev">
+    <!--Content-->
+    <Section>
+        <div class="wrapper">
+            <div class="section-top">
+                <h2>About Me</h2>
+            </div>
+
             <img src="assets/images/RachidaKone-NinaParkerStudios-3011-Web.jpg" height="200" width="200" alt="Rachida Kone">
-            <p>Full-Stack web developer aiming to build web applications that will impact today’s world. Having a Master’s degree in electrical Engineering, I have worked on challenging projects such as renewable energy, High/Low voltage circuits design and PLC programming.</p>
-            <p>My previous experience brought me close to my true passion: building web applications. I feel driven to use my creativity and talent to develop innovative web applications ensuring a pleasant user experience. I possess the analytical abilities and technical skills necessary for engineering innovative designs and applications.</p>
-            <p>Known for my excellent organizational skills and my attention to details, I have demonstrated flexibility, interpersonal and teamwork skills,  initiative and ability to manage workload achieving desired results with minimal supervision.</p>
+            <p>Full-Stack web developer aiming to build web applications that will impact today’s world.
+                Having a
+                Master’s degree in electrical Engineering, I have worked on challenging projects such as renewable
+                energy, High/Low voltage circuits design and PLC programming.</p>
+            <p>My previous experience brought me close to my true passion: building web applications. I feel driven
+                to
+                use my creativity and talent to develop innovative web applications ensuring a pleasant user
+                experience. I possess the analytical abilities and technical skills necessary for engineering
+                innovative designs and applications.</p>
+            <p>Known for my excellent organizational skills and my attention to details, I have demonstrated
+                flexibility, interpersonal and teamwork skills, initiative and ability to manage workload achieving
+                desired results with minimal supervision.</p>
         </div>
     </Section>
-<!--Footer-->
+    <!--Footer-->
     <footer>
-        <H6>Copyright © </H6>
+        <h6>Copyright © </h6>
     </footer>
 </body>
+
 </html>
