Fixing the navigation Bar

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
             <h1>Rachida Kone</h1>
             <div class="navigation">
                 <a class="navigation-url" href="index.html">About</a>
-                <a class="navigation-url" href="portfolio.html" target="blank">Portfolio</a>
-                <a class="navigation-url" href="#" target="blank">Contact</a>
+                <a class="navigation-url" href="portfolio.html">Portfolio</a>
+                <a class="navigation-url" href="contact.html">Contact</a>
             </div>
         </div>
     </header>
