--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="name">
             <h1>Rachida Kone</h1>
             <div class="navigation">
-                <a class="navigation-url" href="#">About</a>
-                <a class="navigation-url" href="portfolio.html" target="blank">Portfolio</a>
-                <a class="navigation-url" href="contact.html" target="blank">Contact</a>
+                <a class="navigation-url" href="index.html">About</a>
+                <a class="navigation-url" href="portfolio.html">Portfolio</a>
+                <a class="navigation-url" href="contact.html">Contact</a>
             </div>
         </div>
 
